# flippin

./: .gitmodules  CMakeLists.txt  README.md
src/: Args.h  CMakeLists.txt
src/cli/: CMakeLists.txt  CatCommand.cpp  CatCommand.h  Command.h  CopyCommand.cpp  CopyCommand.h  CreateCommand.cpp  CreateCommand.h  DelCommand.cpp  DelCommand.h  DeltreeCommand.cpp  DeltreeCommand.h  DirCommand.cpp  DirCommand.h  FilesystemCommand.cpp  FilesystemCommand.h  MdCommand.cpp  MdCommand.h  Options.cpp  Options.h  RdCommand.cpp  RdCommand.h  ReadCommand.cpp  ReadCommand.h  RenCommand.cpp  RenCommand.h  Slashes.cpp  Slashes.h  TypeCommand.cpp  TypeCommand.h  WriteCommand.cpp  WriteCommand.h  main.cpp
src/common/: Args.h  CMakeLists.txt  Error.h  File.cpp  File.h  FileIO.cpp  FileIO.h  Flags.h  Result.h
src/lib/: CMakeLists.txt  Directory.cpp  Directory.h  DirectoryIterator.h  Entry.cpp  Entry.h  FatDirectory.cpp  FatDirectory.h  FatFat.h  FatFile.cpp  FatFile.h  File.cpp  File.h  Filesystem.cpp  Filesystem.h  Format.h  Utf8.cpp  Utf8.h
